# conway-polyhedra-cmake

./: CMakeLists.txt  Cargo.toml  README.md
app_c/: CMakeLists.txt  app.c
lib/: CMakeLists.txt
lib/c/: demo-private.h  demo.c
lib/rust/: CMakeLists.txt  Cargo.toml  build.rs  cbindgen.toml
lib/rust/src/: lib.rs
